2011-05-08  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-com.el (bbdb-display-all-records): Use redisplay.  Why
	needed?

2011-05-08  Leo  <sdl.web@gmail.com>
	* lisp/bbdb-com.el (bbdb-merge-records-internal): Fix typo

2011-05-08  Leo  <sdl.web@gmail.com>
	* lisp/bbdb-mua.el (bbdb-auto-notes): Fix typo

2011-05-07  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-com.el (bbdb-display-current-record): New command.
	(bbdb-display-all-records): Improve docstring.

	* lisp/bbdb.el (bbdb-mode-map): Key bindings for
	bbdb-display-all-records and bbdb-display-current-record.

2011-04-29  Barak A. Pearlmutter  <barak@cs.nuim.ie>
	* lisp/bbdb.el (bbdb-init-forms): Fix typo.
	(bbdb-parse-internal): Clarify error message.

2011-04-29  Barak A. Pearlmutter  <barak@cs.nuim.ie>
	* lisp/bbdb-migrate.el (bbdb-peel-the-onion): New function.
	(bbdb-migrate): Use it for cleaning up corrupted BBDB files.

2011-04-29  Barak A. Pearlmutter  <barak@cs.nuim.ie>
	* lisp/Makefile: Use option --batch.  New target TAGS.

2011-04-29  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el, lisp/bbdb-com.el, lisp/bbdb-migrate.el,
	lisp/bbdb-print.el: Rename degree field to affix.

2011-04-29  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-display-name-organization): Include name in
	text property.
	(bbdb-scan-property): New function.
	(bbdb-next-record, bbdb-prev-record): Use it.
	(bbdb-next-field, bbdb-prev-field): New commands bound to "N" and
	"P".

2011-04-23  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-pop-up-window): Rename from
	bbdb-pop-up-buffer.
	* lisp/bbdb.el (bbdb-display-records-internal)
	* lisp/bbdb-com.el (bbdb-complete-mail): Use new name.

2011-04-23  Leo  <sdl.web@gmail.com>
	* lisp/bbdb.el (bbdb-pop-up-buffer): Distinguish 1 and 1.0 in
	bbdb-pop-up-window-size.

2011-04-23  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-message.el (bbdb-insinuate-message)
	(bbdb-insinuate-mail)
	* lisp/bbdb-rmail.el (bbdb-insinuate-rmail)